# cne-debug

./: plutus-tx-template.cabal
